--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>John Doe - Advanced Portfolio</title>
+  <title>Syed Ammar Hashmi - Advanced Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -96,7 +96,7 @@
           {/* Navigation */}
           <nav className="bg-blue-700 dark:bg-gray-800 text-white p-4 sticky top-0 shadow-lg z-10">
             <div className="container mx-auto flex justify-between items-center">
-              <h1 className="text-2xl font-bold">John Doe</h1>
+              <h1 className="text-2xl font-bold">Syed Ammar Hashmi</h1>
               <div className="flex items-center space-x-6">
                 <ul className="flex space-x-6">
                   <li><a href="#home" className="hover:text-gray-200">Home</a></li>
