--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
           </nav>
 
-          {/* Hero Section */}
+          {/* Main Character Section */}
           <section id="home" className="min-h-screen flex items-center justify-center bg-gradient-to-r from-blue-500 to-purple-600 text-white">
             <div className="container mx-auto text-center px-4">
               <h2 className="text-5xl font-bold mb-4 animate-fade-in">Syed Ammar Hashmi</h2>
@@ -242,7 +242,7 @@
 
           {/* Footer */}
           <footer className="bg-blue-700 dark:bg-gray-800 text-white text-center py-4">
-            <p>© 2025 John Doe. All rights reserved.</p>
+            <p>© 2025 SyedAmmarHashmi. All rights reserved.</p>
           </footer>
         </div>
       );
