--- a/index.html
+++ b/index.html
@@ -1,51 +1,310 @@
-<!DOCTYPE html>
+<script type="text/javascript">
+        var gk_isXlsx = false;
+        var gk_xlsxFileLookup = {};
+        var gk_fileData = {};
+        function filledCell(cell) {
+          return cell !== '' && cell != null;
+        }
+        function loadFileData(filename) {
+        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+            try {
+                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                var firstSheetName = workbook.SheetNames[0];
+                var worksheet = workbook.Sheets[firstSheetName];
+
+                // Convert sheet to JSON to filter blank rows
+                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+                // Filter out blank rows (rows where all cells are empty, null, or undefined)
+                var filteredData = jsonData.filter(row => row.some(filledCell));
+
+                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
+                var headerRowIndex = filteredData.findIndex((row, index) =>
+                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+                );
+                // Fallback
+                if (headerRowIndex === -1 || headerRowIndex > 25) {
+                  headerRowIndex = 0;
+                }
+
+                // Convert filtered JSON back to CSV
+                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                return csv;
+            } catch (e) {
+                console.error(e);
+                return "";
+            }
+        }
+        return gk_fileData[filename] || "";
+        }
+        </script><!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <title> Ammar Portfolio </title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="fanta.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Syed Ammar Hashmi - Advanced Portfolio</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <style>
+    body { margin: 0; overflow-x: hidden; }
+    #particles { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; }
+    .project-card { transition: transform 0.3s ease, box-shadow 0.3s ease; }
+    .project-card:hover { transform: translateY(-10px); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); }
+    .dark .project-card { box-shadow: 0 10px 20px rgba(255, 255, 255, 0.1); }
+  </style>
 </head>
-<body>
-    <header></header>
-        <a href="/">Syed Ammar Hashmi</a>
-        <nav>
-            <a target="_blank" title="Github" href="https://github.com/chocogititup"><i class="fa-brands fa-github"></i></a>
-            <a target="_blank" title="LinkedIn" href="https://www.linkedin.com/in/syedammarhashmi"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#about">About</a></li>
-            <a href="#projects">Projects</a></li>
-            <a href="#contact">Contact</a></li>
-            
-        </nav>    
+<body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-white transition-colors duration-300">
+  <div id="particles"></div>
+  <div id="root"></div>
 
-    <main>
-        <section>
-            <div class="intro-header">
-                <h1> Ola!! I'm Ammar...</h1>
-                <p>Software Developer</p>
+  <script type="text/babel">
+    const { useState, useEffect } = React;
+
+    function App() {
+      const [darkMode, setDarkMode] = useState(false);
+      const [formData, setFormData] = useState({ name: '', email: '', message: '' });
+      const [formError, setFormError] = useState('');
+
+      const toggleDarkMode = () => {
+        setDarkMode(!darkMode);
+        document.body.classList.toggle('dark');
+      };
+
+      const handleInputChange = (e) => {
+        setFormData({ ...formData, [e.target.name]: e.target.value });
+      };
+
+      const handleSubmit = (e) => {
+        e.preventDefault();
+        if (!formData.name || !formData.email || !formData.message) {
+          setFormError('All fields are required!');
+          return;
+        }
+        if (!/\S+@\S+\.\S+/.test(formData.email)) {
+          setFormError('Please enter a valid email!');
+          return;
+        }
+        setFormError('');
+        alert('Message sent! (Simulated)');
+        setFormData({ name: '', email: '', message: '' });
+      };
+
+      return (
+        <div>
+          {/* Navigation */}
+          <nav className="bg-blue-700 dark:bg-gray-800 text-white p-4 sticky top-0 shadow-lg z-10">
+            <div className="container mx-auto flex justify-between items-center">
+              <h1 className="text-2xl font-bold">Syed Ammar Hashmi</h1>
+              <div className="flex items-center space-x-6">
+                <ul className="flex space-x-6">
+                  <li><a href="#home" className="hover:text-gray-200">Home</a></li>
+                  <li><a href="#skills" className="hover:text-gray-200">Skills</a></li>
+                  <li><a href="#projects" className="hover:text-gray-200">Projects</a></li>
+                  <li><a href="#contact" className="hover:text-gray-200">Contact</a></li>
+                </ul>
+                <button
+                  onClick={toggleDarkMode}
+                  className="bg-gray-200 dark:bg-gray-700 text-gray-900 dark:text-white px-3 py-1 rounded-full"
+                >
+                  {darkMode ? 'Light' : 'Dark'} Mode
+                </button>
+              </div>
             </div>
-            <h5 class="intro-discription">
-                I am a software developer with a passion for creating innovative solutions. I have experience in full-stack development, and I love working on projects that challenge my skills and allow me to learn new technologies.
-            </h5>
-            <div>
-                <a target="_blank" href=""><i class="fa-solid fa-envelope"></i>Email me</a>
+          </nav>
+
+          {/* Main Character Section */}
+          <section id="home" className="min-h-screen flex items-center justify-center bg-gradient-to-r from-blue-500 to-purple-600 text-white">
+            <div className="container mx-auto text-center px-4">
+              <h2 className="text-5xl font-bold mb-4 animate-fade-in">Syed Ammar Hashmi</h2>
+              <p className="text-xl mb-6">Computer Science Graduate | Full-Stack Developer | AI Enthusiast</p>
+              <a
+                href="#contact"
+                className="bg-white text-blue-600 px-6 py-2 rounded-full font-semibold hover:bg-gray-200"
+              >
+                Get in Touch
+              </a>
             </div>
-            <div id="play game">
-                <button onclick="">Play Game </button>
-            </div>    
-        </section>
+          </section>
 
-        <section>
-            <h2> Skills</h2>
-        </section>
-    </main> 
+          {/* Skills Section */}
+          <section id="skills" className="py-16">
+            <div className="container mx-auto px-4">
+              <h2 className="text-3xl font-bold text-center mb-8">Skills</h2>
+              <div className="grid grid-cols-1 md:grid-cols-3 gap-6">
+                {[
+                  { title: 'Programming', skills: 'Python, Java, C, JavaScript, Html, Css' },
+                  { title: 'Frameworks & Tools', skills: 'React, Node.js, Django, Flask, TensorFlow' },
+                  { title: 'DevOps & Cloud', skills: 'Docker, Kubernetes, AWS, Git, CI/CD' },
+                ].map((skill, index) => (
+                  <div
+                    key={index}
+                    className="project-card bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md animate-slide-up"
+                    style={{ animationDelay: `${index * 0.2}s` }}
+                  >
+                    <h3 className="text-xl font-semibold mb-2">{skill.title}</h3>
+                    <p>{skill.skills}</p>
+                  </div>
+                ))}
+              </div>
+            </div>
+          </section>
 
-    <footer>
-        <p>By <a>SyedAmmarHashmi</a> ⭐ the repo on github </p>
-    </footer>
-    <script>
+          {/* Projects Section */}
+          <section id="projects" className="bg-gray-200 dark:bg-gray-700 py-16">
+            <div className="container mx-auto px-4">
+              <h2 className="text-3xl font-bold text-center mb-8">Projects</h2>
+              <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
+                {[
+                  {
+                    title: 'AI-Powered Chat App',
+                    desc: 'A real-time chat application with AI-driven sentiment analysis using React and Flask.',
+                    link: '#',
+                  },
+                  {
+                    title: 'Portfolio Website',
+                    desc: 'A dynamic portfolio with a particle background and dark mode, built with React and Tailwind CSS.',
+                    link: '#',
+                  },
+                ].map((project, index) => (
+                  <div
+                    key={index}
+                    className="project-card bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md animate-slide-up"
+                    style={{ animationDelay: `${index * 0.2}s` }}
+                  >
+                    <h3 className="text-xl font-semibold mb-2">{project.title}</h3>
+                    <p className="mb-4">{project.desc}</p>
+                    <a href={project.link} className="text-blue-600 dark:text-blue-400 hover:underline">
+                      View Project
+                    </a>
+                  </div>
+                ))}
+              </div>
+            </div>
+          </section>
 
-    </script>
+          {/* Contact Section */}
+          <section id="contact" className="py-16">
+            <div className="container mx-auto px-4">
+              <h2 className="text-3xl font-bold text-center mb-8">Contact Me</h2>
+              <div className="max-w-lg mx-auto">
+                <div className="flex justify-center space-x-4 mb-6">
+                  <a href="mailto:ammarhash.27@gmail.com" className="text-blue-600 dark:text-blue-400 hover:underline">
+                    ammarhash.27@gmail.com
+                  </a>
+                  <a href="https://linkedin.com/SyedAmmarHashmi" className="text-blue-600 dark:text-blue-400 hover:underline">
+                    LinkedIn
+                  </a>
+                  <a href="https://github.com/Chocogititup" className="text-blue-600 dark:text-blue-400 hover:underline">
+                    GitHub
+                  </a>
+                </div>
+                <div className="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md">
+                  <h3 className="text-xl font-semibold mb-4">Send a Message</h3>
+                  {formError && <p className="text-red-500 mb-4">{formError}</p>}
+                  <div className="space-y-4">
+                    <input
+                      type="text"
+                      name="name"
+                      value={formData.name}
+                      onChange={handleInputChange}
+                      placeholder="Your Name"
+                      className="w-full p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white"
+                    />
+                    <input
+                      type="email"
+                      name="email"
+                      value={formData.email}
+                      onChange={handleInputChange}
+                      placeholder="Your Email"
+                      className="w-full p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white"
+                    />
+                    <textarea
+                      name="message"
+                      value={formData.message}
+                      onChange={handleInputChange}
+                      placeholder="Your Message"
+                      className="w-full p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white"
+                      rows="4"
+                    ></textarea>
+                    <button
+                      onClick={handleSubmit}
+                      className="bg-blue-600 text-white px-6 py-2 rounded-full font-semibold hover:bg-blue-700"
+                    >
+                      Send
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          {/* Footer */}
+          <footer className="bg-blue-700 dark:bg-gray-800 text-white text-center py-4">
+            <p>© 2025 SyedAmmarHashmi. All rights reserved.</p>
+          </footer>
+        </div>
+      );
+    }
+
+    ReactDOM.render(<App />, document.getElementById('root'));
+
+    // Smooth scrolling
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+          behavior: 'smooth'
+        });
+      });
+    });
+
+    // Particle background
+    function initParticles() {
+      const canvas = document.createElement('canvas');
+      canvas.id = 'particles';
+      document.body.appendChild(canvas);
+      const ctx = canvas.getContext('2d');
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+
+      const particles = [];
+      const numParticles = 100;
+
+      for (let i = 0; i < numParticles; i++) {
+        particles.push({
+          x: Math.random() * canvas.width,
+          y: Math.random() * canvas.height,
+          radius: Math.random() * 2 + 1,
+          vx: Math.random() * 2 - 1,
+          vy: Math.random() * 2 - 1,
+        });
+      }
+
+      function draw() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        ctx.fillStyle = 'rgba(255, 255, 255, 0.5)';
+        particles.forEach(p => {
+          ctx.beginPath();
+          ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
+          ctx.fill();
+          p.x += p.vx;
+          p.y += p.vy;
+          if (p.x < 0 || p.x > canvas.width) p.vx *= -1;
+          if (p.y < 0 || p.y > canvas.height) p.vy *= -1;
+        });
+        requestAnimationFrame(draw);
+      }
+
+      draw();
+      window.addEventListener('resize', () => {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+      });
+    }
+
+    initParticles();
+  </script>
 </body>
 </html>
