--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           return;
         }
         setFormError('');
-        alert('Message sent! (Simulated)');
+        alert('Message sent!');
         setFormData({ name: '', email: '', message: '' });
       };
 
@@ -182,14 +182,24 @@
               <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
                 {[
                   {
-                    title: 'AI-Powered Chat App',
-                    desc: 'A real-time chat application with AI-driven sentiment analysis using React and Flask.',
-                    link: '#',
+                    title: 'College Rating System',
+                    desc: ' A platform designed for enhancing student interactions and feedback on collegees. Developed a Learning Management System (LMS). Implemented a feature that enabled students to rate and review colleges.' ,
+                    link: 'https://github.com/chocogititup/Project-Varcons',
+                  },
+                  {
+                    title: 'Finanace Tracker',
+                    desc: 'A dynamic portfolio A finance tracking tool aimed at simplifying personal financial management. •	Developed a command-line-based personal finance tracker using Java. ',
+                    link: 'https://github.com/chocogititup/Finance-Tracker',
+                  },
+                  {
+                    title: 'Flight Delay Prediction',
+                    desc: 'Predicting flight delays using various machine learning techniques such as: Performed Data Preprocessing, EDA, and Feature Engineering, Conducted Statistical analysis of the data. Built and trained the predictive model using Python and Scikit-learn.',
+                    link: 'https://github.com/chocogititup/Flight-delay',
                   },
                   {
                     title: 'Portfolio Website',
-                    desc: 'A dynamic portfolio with a particle background and dark mode, built with React and Tailwind CSS.',
-                    link: '#',
+                    desc: 'A personal portfolio website showcasing my skills and projects. Developed using React and Tailwind CSS, featuring a responsive design and smooth animations.',
+                    link: 'https://github.com/chocogititup/Portfolio'
                   },
                 ].map((project, index) => (
                   <div
@@ -332,4 +342,3 @@
   </script>
 </body>
 </html>
-
