--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
               <h2 className="text-3xl font-bold text-center mb-8">Skills</h2>
               <div className="grid grid-cols-1 md:grid-cols-3 gap-6">
                 {[
-                  { title: 'Programming', skills: 'Python, Java, C, JavaScript, Html, Css' },
-                  { title: 'Frameworks & Tools', skills: 'React, Node.js, Django, Flask, TensorFlow' },
-                  { title: 'DevOps & Cloud', skills: 'Docker, Kubernetes, AWS, Git, CI/CD' },
+                  { title: 'Programming', skills: 'Python, Java, C, JavaScript, Html, Css, SQL' },
+                  { title: 'Frameworks & Tools', skills: 'React, Node.js, Express' },
+                  { title: 'DevOps & Cloud', skills: 'AWS, Git, CI/CD' },
                 ].map((skill, index) => (
                   <div
                     key={index}
@@ -342,3 +342,4 @@
   </script>
 </body>
 </html>
+
